[project]
name = "gdpx3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pycytominer>=1.2.2",
    "scanpy>=1.10.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
